--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^5.1.1",
     "gsap": "^3.12.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.3",
     "next-video": "^2.2.0",
     "postcss": "^8.5.3",
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.17.28",
     "@types/react": "^19",
     "@types/react-dom": "^19",
