--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-popover": "^1.1.11",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.507.0",
     "next": "15.2.3",
     "next-video": "^2.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "smooth-scrollbar": "^8.8.4"
+    "smooth-scrollbar": "^8.8.4",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,6 +42,7 @@
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.14",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.2"
   }
 }
