--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-slot": "^1.2.2",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
