--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "smooth-scrollbar": "^8.8.4",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
