--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "smooth-scrollbar": "^8.8.4",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.4"
