--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-alert-dialog": "^1.1.13",
@@ -30,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
@@ -37,11 +39,14 @@
     "next-video": "^2.2.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "smooth-scrollbar": "^8.8.4",
     "tailwind-merge": "^3.2.0",
+    "zod": "^3.25.51",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
