added an email authentication but only for testing needed a custom domain

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
+    "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
     "next": "15.2.3",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
+    "resend": "^4.5.2",
     "smooth-scrollbar": "^8.8.4",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.25.51",
