--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
     "input-otp": "^1.4.2",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
     "next": "15.2.3",
